Resolve Ring and pyo3 vulnerabilities

--- a/kotlin-attestation-bindings/Cargo.toml
+++ b/kotlin-attestation-bindings/Cargo.toml
@@ -8,11 +8,11 @@ name = "bindings"
 crate-type = ["cdylib"]
 
 [dependencies]
-attestation-doc-validation = "0.6.3"
+attestation-doc-validation = { version = "0.10.0" }
 uniffi = { version = "0.24.1" }
 
 [build-dependencies]
-uniffi = { version = "0.24.1", features = [ "build" ] }
+uniffi = { version = "0.24.1", features = [ "build", "cli" ] }
 
 [[bin]]
 # This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
